--- a/posts/2023-03-10-album-out.md
+++ b/posts/2023-03-10-album-out.md
@@ -4,4 +4,4 @@ title: Album Out!
 date: 2023-03-10T16:49:00.000Z
 featuredpost: true
 ---
-B﻿its & Parts is now out! Find links to hear our debut album on this page. Cheers.
+Bits & Parts is now out! Find links to hear our debut album on this page. Cheers.
